fixed image spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -327,7 +327,7 @@ article p{
 
 article img{
 	max-width:100%;
-	margin-top:30px;
+	margin-top:-30px;
 	border-radius:5px;
 	box-shadow: 0 1px 10px rgba(0,0,0,.25)
 }
